Page MenuHome GnuPG

ship gpgrt.pc
Open, NormalPublic

Description

it's great that we're now shipping gpg-error.pc for use on systems that have pkg-config available. Maybe we should also ship a comparable gpgrt.pc, for those who decide to use the library under its new name?

Details

Version
1.38

Related Objects

StatusAssignedTask
OpenNone
OpenNone

Event Timeline

dkg updated the task description. (Show Details)

Let's wait with this until we ship a libgpgrt. I am not sure what the best way to migrate to another library name. By current idea is start with some release installing two libraries using the two names but with identical code. Some releases later we could require a configure option to install libgpg-error in addition to libgpgrt.

Are you okay with changing this issue's title to "Migrate from libgpg-error to libgpgrt" ?

We currently already ship:

  • gpgrt-config
  • gpgrt.h
  • gpgrt.m4
  • gpgrt.info

We do not currently ship libgpgrt.so.

gpgrt.pc is much more similar to gpgrt-config than it is to libgpgrt.so, which is why i suggested shipping it independently of shipping the .so.

If you think it's important to ship the shared object as well, feel free to retitle this issue.

werner triaged this task as Normal priority.Jan 5 2021, 9:34 AM
werner added a project: Feature Request.
pert signed these changes with MFA.Aug 14 2023, 8:42 AM
-----BEGIN PGP SIGNED MESSAGE-----
Hash: SHA512

When we do ship a pkg-config file for gpgrt, will it be called gpgrt.pc or
libgpgrt.pc? I'm working on rewriting the build system of Monkeysphere right
now and would like to know so I can get the dependency right in case someone
tries building a very old Monkeysphere with a very new gpgrt in the future.

For GPGME and libgpg-error now we do it without the 'lib' prefix, for
libassuan and libgcrypt we do with. The pkg-config spec is silent on this
point. My vote, for whatever it's worth, is to do it with and let GPGME be
the exception, on the basis that mostly nobody calls it 'libgpgme' as a
project name, and because its project name is often spelled uppercase.
-----BEGIN PGP SIGNATURE-----

iHUEARYKAB0WIQSiPzylvTnZ6xisfzWz9N0oYfTNugUCZNnMmAAKCRCz9N0oYfTN
umMzAQCee7HA2xgDyjgPhta2WPowkYPROgPqAk057X/j1ELXywD/eccYJkVWNrXq
qA4N6Bshe9hWp9myT+eYzzSCKEOHcwM=
=DlRV
-----END PGP SIGNATURE-----

It looks to me like it's marginally more common to *not* use the lib prefix for pkgconfig files:

0 dkg@alice:~$ ls /usr/lib/x86_64-linux-gnu/pkgconfig/ | grep -c '^lib[^/]*\.pc$'
175
0 dkg@alice:~$ ls /usr/lib/x86_64-linux-gnu/pkgconfig/ | grep -c '\.pc$'
509
0 dkg@alice:~$

other GnuPG-related projects also differ:

  • libassuan supplies libassuan.pc
  • libksba supplies ksba.pc